kubernetes/superset/stage/httproute.yaml
# genk8s:hash=ec615b1e67e8e31a13cfe5690bffc7c3
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: superset
  namespace: superset
  labels:
    gateway: gpotools
spec:
  # this connects us to the gateway
  parentRefs:
  - kind: Gateway
    name: gpotools
    namespace: gateway
    sectionName: tls-tools
  hostnames:
  - "superset.gpotoolsstage.ca"
  rules:
  - backendRefs:
    - name: superset
      port: 8088
